2004-03-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::index2): If scalar or vector is indexed by
	matrix, return object that is the same size as the index.

	* mx-op-defs.h (NDND_CMP_OP, MM_CMP_OP): Require dimensions to agree.
	Eliminate MT_RESULT args.  Return value is always size of args.
	(MS_CMP_OP, SM_CMP_OP, NDS_CMP_OP, SND_CMP_OP):
	Eliminate EMPTY_RESULT arg.
	Return value is always size of matrix or N-d array arg.
	(TBM, FBM, NBM): Delete unused macros.

2004-03-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::maybe_delete_elements): Return immediately
	if all LHS dimensions are zero.  For one index case, freeze and
	sort idx_vec before checking length, and do nothing if
	num_to_delete is zero.
	(Array<T>::maybe_delete_elements_2): Omit Fortran-indexing warning.

2004-03-04  David Bateman  <dbateman@free.fr>

	* dNDArray.cc (NDArray::ifourier): Arg is int, not const int.
	* CNDArray.cc (ComplexNDArray::ifourier): Likewise.

2004-03-03  Hans Ekkehard Plesser  <hans.ekkehard.plesser@nlh.no>

	* base-lu.cc (base_lu<>::L): Check bounds before setting diagonal
	element.

2004-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Range.h (Range::Range): Add cache to member initialization list.
	(Range::clear_cache): New private function.

	* Range.h (Range::set_base, Range::set_limit, Range::set_inc):
	Use clear cache.  Don't do anything if range does not change.
	* Range.cc (Range::sort): Likewise.

2004-03-02  Paul Kienzle  <pkienzle@users.sf.net>

	* Range.cc (Range::matrix_value): Cache result.
	(Range::sort): Clear cache.
	* Range.h (Range::cache): New data member.
	(Range::set_base, Range::set_limit, Range::set_inc): Clear cache.
	(Range::print_range): Delete.

2004-03-02  David Bateman  <dbateman@free.fr>
 
	* oct-fftw.cc: Only two versions of plan, and avoid endless
	changes between them.  Faster for small fft's.
	(octave_fftw_planner::simd_align, octave_fftw_planner::rsimd_align):
	New member variables. 